# 4dof_scara

./: .gitignore  Dockerfile  Dockerfile_ubuntu  README.md  compose.yaml  control_motors_ik.py  docker_install.sh  feedback_from_multiple_nodes_event_driven.py  git_pull_from_remote.sh  gui_based_motor_control.py  ik_test.py  install_novnc.sh  launch_app.sh  monitor_motor_non_block.py  monitor_motor_status.py  motor_control_ik_home.py  ros_humble_install.sh  xorg_issues.txt
4_dof_scara/config/robot_control/: ros2_controllers.yaml
4_dof_scara/launch/: robot_control.launch.py
4dof_scara/: CMakeLists.txt  package.xml
4dof_scara/config/robot_control/: bus.yml
my_gui_pkg/: package.xml  setup.py
python_drivers/: control_motors.py  control_reverse.py  feedback.py  feedback2.py  feedback3.py  feedback4.py  reverse2.py
src/: launch_app.sh
src/canopen_core/launch/: canopen.launch.py
src/canopen_core/scripts/: setup_vcan.sh
src/canopen_core/test/: test_device_container.cpp
src/canopen_fake_slaves/launch/: basic_slave.launch.py  cia402_slave.launch.py
src/canopen_master_driver/test/: test_node_canopen_basic_master_ros.cpp
src/canopen_tests/: CMakeLists.txt  README.md
src/canopen_tests/launch/: canopen_system.launch.py  cia402_diagnostics_setup.launch.py  cia402_setup.launch.py  (+7 more)
src/my_gui_pkg/: setup.cfg
src/my_rviz_plugin/: package.xml  plugin_description.xml  setup.py
src/my_rviz_plugin/launch/: gui_publisher.launch.py
src/my_rviz_plugin/my_rviz_plugin/: gui_publisher_node.py  joint_values_panel.py
src/scara_4dof/: CMakeLists.txt  package.xml
(+35 files in other folders)
