<package format="3">
  <name>my_rviz_plugin</name>
  <version>0.0.1</version>
  <description>RViz plugin to publish joint values</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>python_qt_binding</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python_qt_binding</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
